--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/postcss": "^4.0.0-beta.8",
     "bits-ui": "^1.0.0-next.76",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.22.0",
@@ -39,14 +39,14 @@
     "paneforge": "^1.0.0-next.2",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.22.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^4.0.0-beta.8",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
