--- a/package.json
+++ b/package.json
@@ -18,47 +18,46 @@
     "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.3",
+    "@eslint/compat": "^1.2.4",
+    "@inlang/paraglide-sveltekit": "^0.15.0",
     "@internationalized/date": "^3.6.0",
-    "@playwright/test": "^1.45.3",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@libsql/client": "^0.14.0",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
+    "@playwright/test": "^1.49.1",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/kit": "^2.15.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/postcss": "^4.0.0-beta.8",
     "bits-ui": "^1.0.0-next.76",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.22.0",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.38.3",
     "embla-carousel-svelte": "^8.5.1",
-    "eslint": "^9.7.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
+    "eslint-plugin-svelte": "^2.46.1",
     "formsnap": "^2.0.0",
-    "globals": "^15.0.0",
+    "globals": "^15.14.0",
     "lucide-svelte": "^0.469.0",
     "mode-watcher": "^0.5.0",
     "paneforge": "^1.0.0-next.2",
-    "prettier": "^3.3.2",
-    "prettier-plugin-svelte": "^3.2.6",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
+    "svelte": "^5.16.0",
+    "svelte-check": "^4.1.1",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.22.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "^4.0.0-beta.8",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0",
     "vaul-svelte": "^1.0.0-next.3",
-    "vite": "^5.4.11",
+    "vite": "^6.0.6",
     "zod": "^3.24.1"
   },
-  "dependencies": {
-    "@inlang/paraglide-sveltekit": "^0.11.1",
-    "@libsql/client": "^0.9.0",
-    "@oslojs/crypto": "^1.0.1",
-    "@oslojs/encoding": "^1.1.0",
-    "drizzle-orm": "^0.33.0"
-  }
+  "dependencies": {}
 }
