--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DATABASE_URL="libsql://db-name-user.turso.io"
 DATABASE_AUTH_TOKEN=""
 # A local DB can also be used in dev as well
 # DATABASE_URL="file:local.db"
+
+# https://github.com/settings/applications/new
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
