chore: update packages

--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
     "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.4",
-    "@inlang/paraglide-sveltekit": "^0.15.0",
-    "@internationalized/date": "^3.6.0",
+    "@eslint/compat": "^1.2.5",
+    "@inlang/paraglide-sveltekit": "^0.15.5",
+    "@internationalized/date": "^3.7.0",
     "@libsql/client": "^0.14.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@playwright/test": "^1.49.1",
     "@sveltejs/adapter-auto": "^3.3.1",
-    "@sveltejs/kit": "^2.15.1",
+    "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/postcss": "^4.0.0-beta.8",
-    "arctic": "^3.2.0",
-    "bits-ui": "^1.0.0-next.76",
+    "@tailwindcss/postcss": "^4.0.0",
+    "arctic": "^3.2.1",
+    "bits-ui": "^1.0.0-next.78",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.30.1",
-    "drizzle-orm": "^0.38.3",
-    "embla-carousel-svelte": "^8.5.1",
-    "eslint": "^9.17.0",
+    "drizzle-kit": "^0.30.2",
+    "drizzle-orm": "^0.38.4",
+    "embla-carousel-svelte": "^8.5.2",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.46.1",
     "formsnap": "^2.0.0",
@@ -44,20 +44,20 @@
     "mode-watcher": "^0.5.0",
     "paneforge": "^1.0.0-next.2",
     "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "svelte": "^5.16.0",
-    "svelte-check": "^4.1.1",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "svelte": "^5.19.2",
+    "svelte-check": "^4.1.4",
     "svelte-sonner": "^0.3.28",
-    "sveltekit-superforms": "^2.22.1",
+    "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.0",
-    "tailwindcss": "^4.0.0-beta.8",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0",
     "vaul-svelte": "^1.0.0-next.3",
-    "vite": "^6.0.6",
+    "vite": "^6.0.11",
     "zod": "^3.24.1"
   },
   "dependencies": {}
