--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/postcss": "^4.0.0",
+    "@types/bun": "^1.1.18",
+    "@valibot/i18n": "^1.0.0-beta.2",
     "arctic": "^3.2.1",
     "bits-ui": "^1.0.0-next.78",
     "clsx": "^2.1.1",
@@ -56,9 +58,9 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
+    "valibot": "^1.0.0-beta.13",
     "vaul-svelte": "^1.0.0-next.3",
-    "vite": "^6.0.11",
-    "zod": "^3.24.1"
+    "vite": "^6.0.11"
   },
   "dependencies": {}
 }
