--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -12,6 +12,6 @@
   "plugin.inlang.messageFormat": {
     "pathPattern": "./messages/{languageTag}.json"
   },
-  "sourceLanguageTag": "en",
-  "languageTags": ["en", "pl"]
+  "baseLocale": "en",
+  "locales": ["en", "pl"]
 }
