--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/bun": "^1.1.18",
     "@valibot/i18n": "^1.0.0-beta.2",
     "arctic": "^3.2.1",
-    "bits-ui": "^1.0.0-next.84",
+    "bits-ui": "^1.3.6",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.2",
     "drizzle-orm": "^0.38.4",
