--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.6.10",
     "svelte": "^5.19.5",
     "svelte-check": "^4.1.4",
+    "svelte-maplibre": "^1.0.0-next.12",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^2.6.0",
