--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/table-core": "^8.21.2",
     "@types/bun": "^1.1.18",
+    "@types/mjml": "^4.7.4",
     "@valibot/i18n": "^1.0.0-beta.2",
     "arctic": "^3.2.1",
     "bits-ui": "^1.3.6",
@@ -30,11 +31,13 @@
     "formsnap": "^2.0.0",
     "globals": "^15.14.0",
     "lucide-svelte": "^0.474.0",
+    "mjml": "^4.15.3",
     "mode-watcher": "^0.5.0",
     "paneforge": "^1.0.0-next.2",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.10",
+    "resend": "^4.1.2",
     "svelte": "^5.19.5",
     "svelte-check": "^4.1.4",
     "svelte-maplibre": "^1.0.0-next.12",
